@startuml
'https://plantuml.com/class-diagram

Game ..> AircraftFactory
Game ..> AbstractAircraft

AircraftFactory .left.> AbstractAircraft

MobEnemyFactory   ..> MobEnemy
EliteEnemyFactory ..> EliteEnemy
BossEnemyFactory  ..> BossEnemy

class Game {

}

interface AircraftFactory {
    + createAircraft(): EnemyAircraft
}

class MobEnemyFactory implements AircraftFactory {
    + MobEnemyFactory()
    + createAircraft(): EnemyAircraft
}

class EliteEnemyFactory implements AircraftFactory {
    + EliteEnemyFactory()
    + createAircraft(): EnemyAircraft
}

class BossEnemyFactory implements AircraftFactory {
    + BossEnemyFactory()
    + createAircraft(): EnemyAircraft
}

abstract class AbstractAircraft {
    # maxHp: int
    # hp   : int
    # shootNum: int
    # power: int
    # shootDirection: int
    # shootStrategy: ShootStrategy

    + AbstractAircraft(int locationX, int locationY, int speedX, int speedY, int hp, int shootNum, int power, int shootDirection, ShootStrategy shootStrategy)
    + setShootStrategy(ShootStrategy shootStrategy): void
    + shoot(): List<BaseBullet>
    + decreaseHp(int decrease): void
    + increaseHp(int increase): void
    + setHp(int hp): void
    + setShootNum(int shootNum): void
    + setShootDirection(int shootDirection): void
    + setPower(int power): void
    + getHp(): int
    + getShootNum(): int
    + getShootDirection(): int
    + getPower(): int
}

class MobEnemy extends AbstractAircraft {

    + MobEnemy(int locationX, int locationY, int speedX, int speedY, int hp, int shootNum, int power, int shootDirection, ShootStrategy shootStrategy)
    + forward(): void
    + dropProps(): List<AbstractProps>
}

class EliteEnemy extends AbstractAircraft {
    - propsList: List<AbstractProps>

    + EliteEnemy(int locationX, int locationY, int speedX, int speedY, int hp, int shootNum, int power, int shootDirection, ShootStrategy shootStrategy)
    + forward(): void
    + dropProps(): List<AbstractProps>
}

class BossEnemy extends AbstractAircraft {

        + BossEnemy(int locationX, int locationY, int speedX, int speedY, int hp, int shootNum, int power, int shootDirection, ShootStrategy shootStrategy)
        + forward(): void
        + dropProps(): List<AbstractProps>
}

@enduml